--- a/composer.json
+++ b/composer.json
@@ -6,14 +6,14 @@
         "php": "^7.2.5",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "php-di/php-di": "6.0.9",
         "symfony/console": "5.0.*",
         "symfony/dotenv": "5.0.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.0.*",
         "symfony/yaml": "5.0.*"
     },
-    "require-dev": {
-    },
+    "require-dev": {},
     "config": {
         "preferred-install": {
             "*": "dist"
